--- a/src/main/resources/templates/user/detail.html
+++ b/src/main/resources/templates/user/detail.html
@@ -12,8 +12,9 @@
     <div class="header border-bottom">
         <h1 class="h2">ユーザー詳細</h1>
     </div>
-    <form id="user-detail-form" method="post" th:action="@{/user/detail}" class="form-signup" th:object="${userDetailForm}">
-        <input type = "hidden" th:field ="*{userId}"/>
+    <form id="user-detail-form" method="post" th:action="@{/user/detail}" class="form-signup"
+          th:object="${userDetailForm}">
+        <input type="hidden" th:field="*{userId}"/>
         <!-- ユーザー詳細情報 -->
         <table class="table table-striped table-bordered table-hover">
             <tbody>
@@ -48,11 +49,11 @@
             </tbody>
         </table>
         <!-- ボタンエリア -->
-        <div class = "text-center">
+        <div class="text-center">
             <!-- 削除ボタン -->
             <button class="btn btn-danger" type="submit" name="delete">削除</button>
             <!-- 更新ボタン -->
-            <button class = "btn btn-primary" type="submit" name="update">更新</button>
+            <button class="btn btn-primary" type="submit" name="update">更新</button>
         </div>
 
 
