--- a/src/main/resources/templates/user/list.html
+++ b/src/main/resources/templates/user/list.html
@@ -12,6 +12,22 @@
     <div class="header border-bottom">
         <h1 class="h2">ユーザー一覧画面</h1>
     </div>
+    <!-- 検索 -->
+    <div class="mb-4">
+        <form id="user-search-form" method="post" th:action="@{/user/list}"
+              class="form-inline" th:object="${userListForm}">
+            <div class="form-group">
+                <label for="userId" class="mr-2">ユーザーID</label>
+                <input type="text" class="form-control" th:field="*{userId}"/>
+            </div>
+            <div class="form-group mx-sm-3">
+                <label for="userName" class="mr-2">ユーザー名</label>
+                <input type="text" class="form-control" th:field="*{userName}"/>
+            </div>
+            <button class="btn btn-primary" type="submit">検索</button>
+        </form>
+    </div>
+
 
     <!-- 一覧表示 -->
     <div>
@@ -34,7 +50,7 @@
                 <td th:text="${item.age}"></td>
                 <td th:text="${item.gender == 1} ? '男性': '女性'"></td>
                 <td>
-                    <a class = "btn-primary" th:href="@{'/user/detail/' + ${item.userId}}">詳細</a>
+                    <a class="btn-primary" th:href="@{'/user/detail/' + ${item.userId}}">詳細</a>
                 </td>
             </tr>
             </tbody>
